Sat Aug 16  7:19:27 GMT 2003  Jim Segrave    <jes@jes-2.demon.nl>

	* gtkchequer.c - empty string instead of null caused errors
	  in sizing hint and annotation windows
	
Fri Aug 15 19:56:24 GMT 2003  Jim Segrave    <jes@jes-2.demon.nl>

	* po/it.po more translations from Renzo Campagna
	
Fri Aug 15 21:01:48 2003  Oystein Johansen  <oystein@gnubg.org>

	* gtkoptions.c: Set seed with a spinbox directly, instead of
	clicking a button and then operate a spinbox.

Fri Aug 15 17:01:48 2003  Joern Thyssen  <jth@gnubg.org>

	* dice.c (ROllDice): use high bits of RNGs to generate dice.
	(reported by Michael Petch)

Fri Aug 15 16:42:02 2003  Joern Thyssen  <jth@gnubg.org>

	* play.c (ComputerTurn, CommandExternal): fix logic
	for resignations.

Fri Aug 15 11:36:41 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* eval.c : constify eval contexts.

Fri Aug 15 10:19:01 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* analysis.h: Remove SKILL_INTERESTING, SKILL_VERYGOOD, but keep
	SKILL_GOOD with a "new" interpretation - to flag analyzed good
	moves as opposed to non-analyzed (SKILL_NONE).

Wed Aug 13 22:02:30 GMT 2003  Jim Segrave    <jes@jes-2.demon.nl>

	* po/it.po more translations from Renzo Campagna

Wed Aug 13 22:48:07 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkchequer.c (UpdateMoveList): ensure proper error 
	handling.

Wed Aug 13 22:38:33 2003  Joern Thyssen  <jth@gnubg.org>

	* set.c (CommandSetTutorChequer): fix typo.
	(contributed by Rob Konigsberg)
	* gnubg.c (CommandSaveSettings): declare szTemp.
	* gtkprefs.c: make szTemp local.	
	(reported by Nardy)

Wed Aug 13 21:32:37 2003  Joern Thyssen  <jth@gnubg.org>

	* play.c (CommandNext): fix bug in "next marked" command.
	(reported by Klaus Rindholt)
	* play.c (ShowMark): protect GTK+ code.

Wed Aug 13 19:44:10 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktheory.c (GTKShowTheory): fix i18n problem.
	(reported by Jim)

Wed Aug 13 19:09:18 2003  Joern Thyssen  <jth@gnubg.org>
