@@ -1,3 +1,14 @@
+Sat Aug 16 10:43:32 2003  Joern Thyssen  <jth@gnubg.org>
+
+        * html.c (HTMLDumpStatcontext), gtkgame.c (GTKDumpStatcontext), 
+        analysis.c (DumpStatcontext): show FIBS rating difference instead
+	of relative FIBS rating.
+	(suggested by Kees van den Doel)
+        * html.c (HTMLDumpStatcontext), gtkgame.c (GTKDumpStatcontext), 
+        analysis.c (DumpStatcontext): show only relative fibs rating
+	for the entire match
+	(suggested by Chris D. Yep)
+
 Sat Aug 16  7:19:27 GMT 2003  Jim Segrave    <jes@jes-2.demon.nl>
 
 	* gtkchequer.c - empty string instead of null caused errors
@@ -14,7 +25,7 @@ Fri Aug 15 21:01:48 2003  Oystein Johansen  <oystein@gnubg.org>
 
 Fri Aug 15 17:01:48 2003  Joern Thyssen  <jth@gnubg.org>
 
-	* dice.c (ROllDice): use high bits of RNGs to generate dice.
+	* dice.c (RollDice): use high bits of RNGs to generate dice.
 	(reported by Michael Petch)
 
 Fri Aug 15 16:42:02 2003  Joern Thyssen  <jth@gnubg.org>
